# svm-tracer

./: Cargo.toml
builder/: Cargo.toml
builder/src/: error.rs  lib.rs  memory.rs  syscall_decode.rs
src/: lib.rs  syscall_decode.rs
test-programs/cpi-target/: Cargo.toml
test-programs/cpi-target/src/: lib.rs
test-programs/custom-syscall/: Cargo.toml
test-programs/custom-syscall/src/: lib.rs
test-programs/epoch-stake/: Cargo.toml
test-programs/epoch-stake/src/: lib.rs
test-programs/primary/: Cargo.toml
test-utils/runner/: Cargo.toml
test-utils/runner/src/: main.rs
